HH-100534 fix NPE